[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/NavItem.gd" type="Script" id=1]

[node name="NavItem" type="Control" groups=["NavItem"]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1530.0
margin_bottom = -950.0
rect_min_size = Vector2( 70, 50 )
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.0784314, 0.470588, 0.454902, 1 )

[node name="Label" type="Label" parent="."]
margin_left = 70.0
margin_right = 225.0
margin_bottom = 50.0
input_pass_on_modal_close_click = false
custom_colors/font_color = Color( 1, 1, 1, 1 )
valign = 1

[node name="Icon" type="Sprite" parent="."]
position = Vector2( 35, 25 )

[node name="ActiveSign" type="ColorRect" parent="."]
rect_min_size = Vector2( 12, 50 )
mouse_filter = 2
color = Color( 0.694118, 0.803922, 0.741176, 1 )

[connection signal="gui_input" from="." to="." method="_on_NavItem_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_NavItem_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_NavItem_mouse_exited"]
